--- a/style.css
+++ b/style.css
@@ -14,25 +14,26 @@ header {
 }
 .logotype {
   height: 75px;
-  width: 175px;
+  width: auto;
 }
 .header button {
   background-color: #303030;
   border: none;
 }
 .logo {
-  height: 70px;
-  width: 230px;
+  height: auto;
+  width: auto;
 }
 .direction {
   height: 72px;
-  width: 1357px;
+  width: auto;
   display: flex;
+  margin-right: 10%;
 }
 .logo form,
 .logo button {
-  height: 70px;
-  width: 180px;
+  width: auto;
+  height: auto;
 }
 .arh,
 .art {
@@ -49,7 +50,7 @@ header {
 .tools {
   display: flex;
   justify-content: center;
-  margin-top: 1.5%;
+  margin-top: 1.3%;
 }
 .favorite,
 .account,
@@ -62,13 +63,13 @@ header {
   width: auto;
 }
 .content {
-  height: 4700px;
-  width: 84.3%;
+  height: auto;
+  width: 84.7%;
   background-color: #343434;
 }
 .sidebar {
-  height: 4700px;
-  width: 15.7%;
+  height: auto;
+  width: 15%;
   float: right;
   background-color: #303030;
   display: flex;
@@ -107,19 +108,32 @@ h2 {
   height: 70px;
   margin: 10px;
 }
+.post1,
+.post2,
+.post3,
+.post4,
+.post5,
+.post6 {
+  width: auto;
+  height: auto;
+}
 a:active {
   color: #909090;
 }
 .maincontent {
-  height: 4700px;
+  height: auto;
   width: 65%;
   background-color: #343434;
   margin: auto;
 }
 .imgdiz1 {
-  height: 432px;
-  width: 767px;
   margin: auto;
+  display: flex;
+  justify-content: center;
+}
+.imgdiz1 img {
+  height: 10%;
+  width: 70%;
 }
 .SID {
   margin-left: 11px;
@@ -132,6 +146,7 @@ a:active {
 .scan,
 .at {
   display: flex;
+  justify-content: space-around;
 }
 .neo-p,
 .fuz-p,
@@ -150,9 +165,19 @@ a:active {
 .diz-prov img,
 .diz-scan img,
 .diz-at img {
-  height: 430px;
+  height: 450px;
   width: 450px;
-  margin-left: 50px;
+  margin-left: 3%;
+}
+.diz-neo,
+.diz-fuz,
+.diz-hy,
+.diz-lof,
+.diz-prov,
+.diz-scan,
+.diz-at {
+  height: auto;
+  width: auto;
 }
 h3 {
   font-size: 23px;
