--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header {
 .tools {
   display: flex;
   justify-content: center;
-  margin-top: 1.3%;
+  margin-top: 1.5%;
 }
 .favorite,
 .account,
@@ -65,7 +65,7 @@ header {
 .content {
   height: auto;
   width: 84.7%;
-  background-color: #343434;
+  background-color: #323232;
 }
 .sidebar {
   height: auto;
@@ -123,7 +123,7 @@ a:active {
 .maincontent {
   height: auto;
   width: 65%;
-  background-color: #343434;
+  background-color: #323232;
   margin: auto;
 }
 .imgdiz1 {
@@ -183,9 +183,29 @@ h3 {
   font-size: 23px;
 }
 p {
-  font-size: 17px;
+  font-size: 18px;
   margin: 14px;
 }
 li {
   margin: 6px;
+}
+@media screen and (max-width: 1478px) {
+  .imgdiz1 img {
+    width: 80%;
+  }
+  .account,
+  .theme,
+  .favorite {
+    width: 65px;
+  }
+  .direction {
+    margin-right: 12%;
+  }
+  .maincontent p {
+    font-size: 17px;
+  }
+  .SID {
+    margin-left: 11px;
+    margin-top: 70px;
+  }
 }
